2010-07-28

	* src/summaryview.[ch]
	  src/mainwindow.c: improved the always-show-msg-on-summary-select
	  mode (don't mark as read on automatic selection).

2010-07-27

	* libsylph/sylmain.c
	  src/main.c: moved ssl_init()/ssl_done() from
	  syl_init()/syl_cleanup() to src/main. Fixes accepted SSL certs
	  not loaded when using alternative config dir.

2010-07-23

	* libsylph/virtual.c
	  src/folderview.c: enabled moving of virtual folders.

2010-07-22

	* src/addressbook.c: implemeted drag and drop of addresses.

2010-07-21

	* src/prefs_template.c: notify on OK button press if not saved.

2010-07-21

	* src/prefs_template.c: confirm on cancel if templates are modified.
	  Added Up/Down button to reorder template list.

2010-07-20

	* src/importcsv.c: added 'Alias' attribute.

2010-07-16

	* version 3.1.0beta2

2010-07-16

	* manual/*/Makefile.am: disabled install of sylpheed.sgml.

2010-07-16

	* libsylph/utils.c
	  libsylph/procmsg.c: removed redundant debug print.

2010-07-16

	* libsylph/libsylph-0.def: updated.
	* src/libsylpheed-plugin-0.def: updated.

2010-07-16

	* libsylph/filter.c: filter_cond_new(): fixed a bug that the value of
	  <account-id> tag was not parsed correctly.

2010-07-16

	* manual/GFDL-1.2
	  manual/en/sylpheed.sgml
	  manual/en/*.html: updated to sylpheeddoc_manual_en_09032003.tar.gz.
	  Added missing SGML source file. Also included GFDL-1.2 text file.

2010-07-14

	* src/plugin.[ch]
	  src/main.c: added syl_plugin_summary_show_queued_msgs() and cleanup
	  the code.

2010-07-14

	* src/gtkutils.[ch]
	  src/addressbook.c
	  src/compose.c
	  src/mainwindow.c: always display fixed-positioned windows on screen
	  (prevent windows displayed outside of screen between multi and
	  single monitor switching).
	* src/compose.c: always display compose window at the same location
	  even if overlapped.

2010-07-13

	* src/summaryview.c: summary_show_queued_msgs(): scroll summary view
	  to make added messages are visible.

2010-07-13
