@@ -1,5 +1,10 @@
 2010-07-28
 
+	* src/folderview.c: folderview_menu_popup(): show/hide needless items
+	  depending on context.
+
+2010-07-28
+
 	* src/summaryview.[ch]
 	  src/mainwindow.c: improved the always-show-msg-on-summary-select
 	  mode (don't mark as read on automatic selection).
